fixes footer formatting so it isnt covering content, and adds padding to the main content on index page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 .container {
     width: 90%;
     max-width: 960px;
@@ -68,7 +77,7 @@ footer:before{
     background-color: #3b3b3b;
     text-decoration: none;
     color: #ffffff;
-    /* overflow: hidden; */
+    overflow: hidden;
   }
 
 
@@ -181,7 +190,7 @@ button {
 }
 
 #name {
-    padding-right: 780px; 
+    padding-right: 70%; 
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 5px;
@@ -251,9 +260,37 @@ button {
 
 
 
+  html,body
+  {
+      width: 100%;
+      height: 100%;
+      margin: 0px;
+      padding: 0px;
+      overflow-x: hidden; 
+  }
+
 
 
   /* MEDIA QUIERIES */
+
+  @media screen and (max-width: 980px) {
+    .main-content-wrapper {
+      width: 90%;
+      margin: auto;
+      background-color: #ffffff;
+      height: 500px;
+      /* padding: 20px 20px 20px 20px; */
+      margin-top: 40px;
+      /* padding: 50px 50px 50px 50px; */
+    }
+
+    .my-photo {
+        width: 170px;
+    }
+
+}
+
+
 
   @media screen and (max-width: 768px) {
       .main-content-wrapper {
@@ -270,16 +307,47 @@ button {
           width: 170px;
       }
 
-
-
   }
 
+
+
   @media screen and (max-width: 640px) {
-      
+
+    .main-content-wrapper {
+        width: 95%;
+        padding-bottom: 500px;
+    }
+
+    .picture-container {
+        width: 100%;
+    }
+
+    .my-photo {
+        width: 60%;
+        text-align: center;
+        float: none;
+        display: block;
+        margin: 0 auto;
+    }
+
+    .indexParagraph {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+   
+    
 }
 
 
 
+
+
+
+
+
+
+/* navbar formatting for larger screens */
 @media screen and (min-width: 640px) {
     nav ul{
         display: flex;
@@ -290,7 +358,7 @@ button {
     }
 
     nav li:not(:first-child):before {
-        content: ' | ';
+        /* content: ' | '; */
         font-size: 26px;
         position: absolute;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -298,10 +366,7 @@ button {
         text-align: center;
         justify-content: center;
         align-items: center;
-        /* right: -2px; */
-        /* top: 25%; */
-        /* width: 2px; */
-        /* height: 50%; */
+
     }
 
     nav {
